.kustomize/media/transmission/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/name: transmission
  name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: transmission
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: transmission
        app.kubernetes.io/name: transmission
    spec:
      containers:
      - env:
        - name: TZ
          value: Asia/Singapore
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: linuxserver/transmission:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9091
          timeoutSeconds: 5
        name: transmission
        ports:
        - containerPort: 9091
          name: main
          protocol: TCP
        - containerPort: 51413
          name: torrent
          protocol: TCP
        - containerPort: 51413
          name: torrentudp
          protocol: UDP
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 2
          tcpSocket:
            port: 9091
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 4000m
            memory: 8Gi
          requests:
            cpu: 10m
            memory: 50Mi
        startupProbe:
          failureThreshold: 60
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 9091
          timeoutSeconds: 2
        stdin: false
        tty: false
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: data
          subPath: downloads/transmission
        - mountPath: /watch
          name: data
          subPath: downloads/watch
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: transmission-config
      - name: data
        persistentVolumeClaim:
          claimName: data
