.kustomize/media/transmission/resources/transmission-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/name: transmission
  name: transmission
spec:
  ports:
  - name: main
    port: 10109
    protocol: TCP
    targetPort: 10109
  selector:
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/name: transmission
  type: ClusterIP
