.kustomize/media/transmission/resources/transmission-torrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/name: transmission
  name: transmission-torrent
spec:
  ports:
  - name: torrent
    port: 51413
    protocol: TCP
    targetPort: 51413
  - name: torrentudp
    port: 51413
    protocol: UDP
    targetPort: 51413
  selector:
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/name: transmission
  type: ClusterIP
