.kustomize/media/transmission/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: transmission-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: transmission.josephang.space
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              number: 9091
